--- a/Login/Login.html
+++ b/Login/Login.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Login.css">
+    <title>Login</title>
+</head>
+<body>
+    <form class="login-form">
+        <h1>Login</h1>
+        <h4>Are you a new member? Sign Up Here</h4>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
 
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+
+        <button type="submit">Login</button>
+        <button type="Reset">Reset</button>
+        <h4>Forgot Password?</h4>
+    </form>
+</body>
 </html>
